init: many2many relation berween roles and users
